--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-POSTGRES_HOST=localhost
+POSTGRES_HOST=ep-green-water-aczzy6ew-pooler.sa-east-1.aws.neon.tech
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_DB=postgres
-POSTGRES_PASSWORD=mypassword
+POSTGRES_USER=neondb_owner
+POSTGRES_DB=neondb
+POSTGRES_PASSWORD=npg_rl86kUECzQux
