--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "npm run services:up && npm run wait-for-postgres &&  concurrently --names next,jest --hide next -k -s command-jest 'next dev' 'jest --runInBand' ",
+    "test": "npm run services:up &&  concurrently --names next,jest --hide next -k -s command-jest 'next dev' 'jest --runInBand' ",
     "test:watch": "npm run services:up && npm run wait-for-postgres && jest --watchAll --runInBand",
     "migrate:create": "node-pg-migrate -m infra/migrations create",
     "migrate:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
