--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "services:stop": "docker compose -f infra/compose.yaml stop",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "next lint --dir .",
     "test": "npm run services:up &&  concurrently --names next,jest --hide next -k -s command-jest 'next dev' 'jest --runInBand' ",
     "test:watch": "npm run services:up && npm run wait-for-postgres && jest --watchAll --runInBand",
     "migrate:create": "node-pg-migrate -m infra/migrations create",
@@ -30,6 +31,10 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.12.0",
     "jest": "^29.6.2",
     "prettier": "^3.5.1"
   }
