--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -20,9 +20,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/hydrogen"
       - run: npm ci
-      - run: npm test
-      - run: npm run lint:eslint:check
+      - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
