--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "npm run services:up && npm run wait-for-postgres && jest --watchAll --runInBand",
     "migrate:create": "node-pg-migrate -m infra/migrations create",
     "migrate:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js"
+    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js",
+    "prepare": "husky"
   },
   "author": "",
   "license": "MIT",
@@ -37,6 +38,7 @@
     "eslint-config-next": "15.3.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.12.0",
+    "husky": "^9.1.4",
     "jest": "^29.6.2",
     "prettier": "^3.5.1"
   }
