--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "next lint --dir .",
-    "test": "npm run services:up &&  concurrently --names next,jest --hide next -k -s command-jest 'next dev' 'jest --runInBand' ",
+    "test": "npm run services:up && concurrently --names next,jest --hide next -k -s command-jest \"npm run dev\" \"npx jest --runInBand\" ",
     "test:watch": "npm run services:up && npm run wait-for-postgres && jest --watchAll --runInBand",
     "migrate:create": "node-pg-migrate -m infra/migrations create",
     "migrate:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
@@ -22,28 +22,28 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "async-retry": "^1.3.3",
-    "dotenv": "^16.4.4",
-    "dotenv-expand": "^11.0.6",
-    "next": "^13.1.6",
-    "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "async-retry": "1.3.3",
+    "dotenv": "16.4.4",
+    "dotenv-expand": "11.0.6",
+    "next": "13.1.6",
+    "node-pg-migrate": "6.2.2",
+    "pg": "8.11.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "commitizen": "^4.3.0",
-    "concurrently": "^8.2.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.57.1",
+    "@commitlint/cli": "19.3.0",
+    "@commitlint/config-conventional": "19.2.2",
+    "commitizen": "4.3.0",
+    "concurrently": "8.2.2",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.57.1",
     "eslint-config-next": "15.3.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.12.0",
-    "husky": "^9.1.4",
-    "jest": "^29.6.2",
-    "prettier": "^3.5.1"
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-jest": "28.12.0",
+    "husky": "9.1.4",
+    "jest": "29.6.2",
+    "prettier": "3.5.1"
   },
   "config": {
     "commitizen": {
