--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run services:up && npm run services:wait:database && npm run migrations:up && next dev",
+    "postdev": "npm run services:stop",
     "test": "npm run services:up && concurrently --names next,jest --hide next -k -s command-jest \"npm run dev\" \"npx jest --runInBand\" ",
+    "posttest": "npm run services:stop",
     "test:watch": "npm run services:up && npm run wait-for-postgres && jest --watchAll --runInBand",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:down": "docker compose -f infra/compose.yaml down",
