--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postdev": "npm run services:stop",
     "test": "npm run services:up && concurrently --names next,jest --hide next -k -s command-jest \"npm run dev\" \"npx jest --runInBand\" ",
     "posttest": "npm run services:stop",
-    "test:watch": "npm run services:up && npm run wait-for-postgres && jest --watchAll --runInBand",
+    "test:watch": "jest --watchAll --runInBand --verbose",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:down": "docker compose -f infra/compose.yaml down",
     "services:stop": "docker compose -f infra/compose.yaml stop",
